fix(VsModalView): apply z-index value

--- a/packages/vlossom/src/components/vs-container/VsContainer.scss
+++ b/packages/vlossom/src/components/vs-container/VsContainer.scss
@@ -1,6 +1,5 @@
 .vs-container {
     position: relative;
-    width: 100%;
     // for container query
     container-type: inline-size;
     color: var(--vs-font-color);
